--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -202,3 +202,31 @@ div.ui-dialog-titlebar{
 .att_val_container div.col-sm{
   text-align: right;
 }
+
+.dropdownbutton {
+  background-color: inherit;
+  color: black;
+  padding: 8px;
+  font-size: 1em;
+  border: none;
+}
+.dropdown {
+  position: relative;
+  background: none;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropdownbutton {-webkit-transform: scale(1.1);}
