--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -142,24 +142,35 @@
                             <div class="col-sm" style="text-align: right; max-width: 8.75rem">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                                 {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
-                                <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
+                                    <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
                                 {% endif %}
                                 {% if valrun.end_time %}
-                                    {% if valrun.output_file %}
-                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
-                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
-                                {% endif %}
                                     {% if valrun.is_unpublished %}
                                         <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
-                                            <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
                                             {% if valrun.is_archived %}
                                                 <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
                                             {% else %}
-                                                <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
                                                 <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
                                             {% endif %}
                                         </span>
                                     {% endif %}
+                                    <div class="dropdown">
+                                        <button class="dropdownbutton">More...</button>
+                                        <div class="dropdown-content" style="text-align: left">
+                                            {% if valrun.output_file %}
+                                                <button class="btn btn-sm btn-primary btn-action" onclick="location.href='{{ valrun.output_dir_url }}graphs.zip';" title="Download all graphs"><span class="fas fa-download"></span></button>
+                                                <button class="btn btn-sm btn-primary btn-action" onclick="location.href='{{ valrun.output_file.url }}';" title="Download NetCDF"><span class="fas fa-file-download"></span></button>
+                                            {% endif %}
+                                            {% if valrun.is_unpublished %}
+                                                <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
+                                                    <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
+                                                    {% if not valrun.is_archived %}
+                                                        <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
+                                                    {% endif %}
+                                                </span>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                 {% endif %}
                             </div>
                         </div>
@@ -206,10 +217,12 @@
 {% endblock %}
 
 {% block javascript %}
+
     <script type="text/javascript">
         csrf_token = '{{csrf_token}}';
         result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
         stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
     </script>
     <script src="{% static 'js/results_buttons.js' %}"></script>
+
 {% endblock %}
