worked on dataset component

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -1,1 +1,21 @@
-<p>validate works!</p>
+<div class="p-grid">
+
+  <!--  data-->
+  <div class="p-md-6 p-sm-12">
+    <div class="p-d-flex p-jc-center">
+      <p-panel header="Data" [toggleable]="true" [style]="{'min-width': '20em'}">
+        <qa-dataset></qa-dataset>
+      </p-panel>
+    </div>
+  </div>
+
+  <!--  reference-->
+  <div class="p-md-6 p-sm-12">
+    <div class="p-d-flex p-jc-center">
+      <p-panel header="Reference" [toggleable]="true" [style]="{'min-width': '20em'}">
+        <qa-dataset></qa-dataset>
+      </p-panel>
+    </div>
+  </div>
+</div>
+
