--- a/UI/src/app/pages/error/error.component.html
+++ b/UI/src/app/pages/error/error.component.html
@@ -1,12 +1,13 @@
-<div class="p-grid">
-  <div class="p-col-12">
-    <div class="p-d-flex p-jc-center ">
-      <p-card header="Error">
+<!--<div class="p-grid">-->
+<!--  <div class="p-col-12">-->
+<!--    <div class="p-d-flex p-jc-center ">-->
+<!--      <p-card header="Error">-->
+<!--        Something went wrong-->
+<!--      </p-card>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+
+
         Something went wrong
-      </p-card>
-    </div>
-  </div>
-</div>
-
-
-
