--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -1,21 +1,21 @@
-<div class="p-grid">
+<!--<div class="p-grid">-->
 
-  <!--  data-->
-  <div class="p-md-6 p-sm-12">
-    <div class="p-d-flex p-jc-center">
-      <p-panel header="Data" [toggleable]="true" [style]="{'min-width': '20em'}">
-        <qa-dataset></qa-dataset>
-      </p-panel>
-    </div>
-  </div>
+<!--  &lt;!&ndash;  data&ndash;&gt;-->
+<!--  <div class="p-md-6 p-sm-12">-->
+<!--    <div class="p-d-flex p-jc-center">-->
+<!--      <p-panel header="Data" [toggleable]="true" [style]="{'min-width': '20em'}">-->
+<!--        <qa-dataset></qa-dataset>-->
+<!--      </p-panel>-->
+<!--    </div>-->
+<!--  </div>-->
 
-  <!--  reference-->
-  <div class="p-md-6 p-sm-12">
-    <div class="p-d-flex p-jc-center">
-      <p-panel header="Reference" [toggleable]="true" [style]="{'min-width': '20em'}">
-        <qa-dataset></qa-dataset>
-      </p-panel>
-    </div>
-  </div>
-</div>
+<!--  &lt;!&ndash;  reference&ndash;&gt;-->
+<!--  <div class="p-md-6 p-sm-12">-->
+<!--    <div class="p-d-flex p-jc-center">-->
+<!--      <p-panel header="Reference" [toggleable]="true" [style]="{'min-width': '20em'}">-->
+<!--        <qa-dataset></qa-dataset>-->
+<!--      </p-panel>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
