--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,12 +1,34 @@
-<div class="p-grid">
-  <div class="p-col-12">
-    <navigation-bar></navigation-bar>
-  </div>
-  <div class="p-col-12">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="navbar-brand" >
 
+    {{ title }}
+  </div>
+  <button (click)="isCollapsed = !isCollapsed" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://twitter.com/oktadev">@oktadev</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/oktadeveloper/okta-angular-bootstrap-example">GitHub</a>
+      </li>
+      <li class="nav-item pl-lg-3">
+        <button  class="btn btn-outline-primary">Login</button>
+        <button class="btn btn-outline-secondary">Logout</button>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container-fluid pt-3">
+  <router-outlet></router-outlet>
+</div>
 
 
 
