worked on authentication and navigation bar

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,8 +1,6 @@
+<qa-toast></qa-toast>
 <navigation-bar></navigation-bar>
 
-<div class="container-fluid pt-3">
-  <router-outlet></router-outlet>
-</div>
 
-
+<router-outlet></router-outlet>
 
