--- a/UI/src/app/pages/login/login.component.html
+++ b/UI/src/app/pages/login/login.component.html
@@ -1,3 +1,48 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+
+    </div>
+    <div class="col-12 col-sm-8 col-md-4 col-lg3 col-xl-2">
+      <form [formGroup]="loginForm" class="user-form text-center" (ngSubmit) = "onSubmit()">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+
+        <input type="text" class="form-control m-1" placeholder="Username" aria-label="Recipient's username"
+               aria-describedby="basic-addon2" formControlName="username">
+        <input type="password" class="form-control  m-1" placeholder="Password" aria-label="Recipient's username"
+               aria-describedby="basic-addon2" formControlName="password">
+
+        <button class="btn btn-lg btn-primary btn-block  m-1" type="submit">Sign in</button>
+
+        <div class="mt-3"><a href="{% url 'password_reset' %}" class="mt-5">Forgotten your password?</a></div>
+      </form>
+    </div>
+    <div class="col">
+
+    </div>
+  </div>
+</div>
+
+
+<!--    <div class="col">-->
+
+<!--    </div>-->
+<!--    <div class="col-sm-12 col-md- col-xl-6">-->
+<!--        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">-->
+<!--    </div>-->
+<!--    <div class="col">-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="row">-->
+<!--    <div class="col">-->
+<!--      <input type="text">-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</form>-->
+
+
 <!--<div class="p-grid">-->
 <!--  <div class="p-col-12">-->
 <!--    <div class="p-d-flex p-jc-center">-->
