add link to user profile button

--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -27,7 +27,7 @@
             <fa-icon [icon]="termsIcon"></fa-icon>
             Terms
           </button>
-          <button ngbDropdownItem [disabled]="userProfileButtonDisabled">
+          <button ngbDropdownItem [disabled]="userProfileButtonDisabled" routerLink="/user-profile">
             <fa-icon [icon]="profileIcon"></fa-icon>
             Profile
           </button>
