--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -21,6 +21,11 @@
       <button (click)="navigateToLogin()" type="button" class="btn btn-primary btn-lg m-1">Sign in</button>
     </div>
   </div>
+  <div class="row">
+    <div class="col text-center">
+      <p-dropdown [options]="cities"  optionLabel="name"></p-dropdown>
+    </div>
+  </div>
 </div>
 
 <!--<div class="p-grid">-->
