--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "primeng-style";
 
-$base-color: #c6538c;
