worked on datasets component

--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -33,7 +33,7 @@
 <div class="p-grid" *ngIf="removable">
   <div class="p-col">
     <div class="p-fluid">
-      <button pButton type="button" (click)="onRemoveDataset()" label="Remove" icon="pi pi-trash"
+      <button pButton type="button" (click)="onRemoveDataset()" label="Remove dataset" icon="pi pi-trash"
               class="p-button-danger" style="padding: 0.2rem;"></button>
     </div>
   </div>
