fix /nav-bar/validate button

--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -39,7 +39,7 @@
       </div>
 
       <li class="nav-item  m-1">
-        <a class="nav-link navbar-btn btn btn-outline-primary " routerLink="validate" routerLinkActive="navbar-btn-active">
+        <a class="nav-link navbar-btn btn btn-outline-primary " routerLink="validate" >
           <fa-icon [icon]="validateIcon"></fa-icon>
           Validate<span
           class="sr-only">(current)</span></a>
