--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -2,7 +2,7 @@
   <div class="p-col">
     <span class="p-float-label p-mb-4 p-mt-3">
     <p-dropdown id="datasetSelector" (onChange)="onDatasetChange()" [options]="(datasets$|async)"
-                [(ngModel)]="selectedDataset"
+                [(ngModel)]="selectionModel.selectedDataset"
                 optionLabel="pretty_name" [style]="{'width': '100%'}"></p-dropdown>
       <label for="datasetSelector">Dataset</label>
     </span>
