--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -14,9 +14,9 @@
   <div class="p-col">
     <span class="p-float-label p-mb-4">
       <p-dropdown id="versionSelector" [style]="{'width': '100%'}" [options]="(selectableDatasetVersions$|async)"
-                  optionLabel="pretty_name"></p-dropdown>
-            <label for="versionSelector">Version</label>
-        </span>
+                  [(ngModel)]="selectionModel.selectedVersion" optionLabel="pretty_name"></p-dropdown>
+      <label for="versionSelector">Version</label>
+    </span>
 
   </div>
 </div>
@@ -24,7 +24,9 @@
 <div class="p-grid  p-align-center">
   <div class="p-col">
     <span class="p-float-label">
-      <p-dropdown id="variableSelector" optionLabel="name" [style]="{'width': '100%'}"></p-dropdown>
+      <p-dropdown id="variableSelector" optionLabel="pretty_name" [style]="{'width': '100%'}"
+                  [options]="(selectableDatasetVariables$|async)"
+                  [(ngModel)]="selectionModel.selectedVariable"></p-dropdown>
             <label for="variableSelector">Variable</label>
     </span>
 
